@@ -665,21 +665,6 @@ int32_t SPVM__Net__SSLeay__version(SPVM_ENV* env, SPVM_VALUE* stack) {
   return 0;
 }
 
-int32_t SPVM__Net__SSLeay__session_reused(SPVM_ENV* env, SPVM_VALUE* stack) {
-  
-  int32_t error_id = 0;
-  
-  void* obj_self = stack[0].oval;
-  
-  SSL* self = env->get_pointer(env, stack, obj_self);
-  
-  int32_t ret = SSL_session_reused(self);
-  
-  stack[0].ival = ret;
-  
-  return 0;
-}
-
 int32_t SPVM__Net__SSLeay__get_cipher(SPVM_ENV* env, SPVM_VALUE* stack) {
   
   int32_t error_id = 0;
@@ -755,70 +740,6 @@ int32_t SPVM__Net__SSLeay__pending(SPVM_ENV* env, SPVM_VALUE* stack) {
   return 0;
 }
 
-int32_t SPVM__Net__SSLeay__get1_session(SPVM_ENV* env, SPVM_VALUE* stack) {
-  
-  int32_t error_id = 0;
-  
-  void* obj_self = stack[0].oval;
-  
-  SSL* self = env->get_pointer(env, stack, obj_self);
-  
-  SSL_SESSION* ssl_session = SSL_get1_session(self);
-  
-  void* obj_ssl_session = NULL;
-  
-  if (ssl_session) {
-    void* obj_address_ssl_session = env->new_pointer_object_by_name(env, stack, "Address", ssl_session, &error_id, __func__, FILE_NAME, __LINE__);
-    if (error_id) { return error_id; }
-    stack[0].oval = obj_address_ssl_session;
-    env->call_class_method_by_name(env, stack, "Net::SSLeay::SSL_SESSION", "new_with_pointer", 1, &error_id, __func__, FILE_NAME, __LINE__);
-    if (error_id) { return error_id; }
-    obj_ssl_session = stack[0].oval;
-  }
-  
-  stack[0].oval = obj_ssl_session;
-  
-  return 0;
-}
-
-int32_t SPVM__Net__SSLeay__set_session(SPVM_ENV* env, SPVM_VALUE* stack) {
-  
-  int32_t error_id = 0;
-  
-  void* obj_self = stack[0].oval;
-  
-  void* obj_ssl_session = stack[1].oval;
-  
-  SSL* self = env->get_pointer(env, stack, obj_self);
-  
-  SSL_SESSION* ssl_session = env->get_pointer(env, stack, obj_ssl_session);
-  
-  int32_t status = SSL_set_session(self, ssl_session);
-  
-  if (!(status == 1)) {
-    int64_t ssl_error = ERR_peek_last_error();
-    
-    char* ssl_error_string = env->get_stack_tmp_buffer(env, stack);
-    ERR_error_string_n(ssl_error, ssl_error_string, SPVM_NATIVE_C_STACK_TMP_BUFFER_SIZE);
-    
-    env->die(env, stack, "[OpenSSL Error]SSL_set_session failed:%s.", ssl_error_string, __func__, FILE_NAME, __LINE__);
-    
-    int32_t tmp_error_id = env->get_basic_type_id_by_name(env, stack, "Net::SSLeay::Error", &error_id, __func__, FILE_NAME, __LINE__);
-    if (error_id) { return error_id; }
-    error_id = tmp_error_id;
-    
-    return error_id;
-  }
-  
-  // SSL_SESSION_free is called in SSL_set_session
-  env->set_no_free(env, stack, obj_ssl_session, 1);
-  
-  env->set_field_object_by_name(env, stack, obj_self, "ssl_session", obj_ssl_session, &error_id, __func__, FILE_NAME, __LINE__);
-  if (error_id) { return error_id; }
-  
-  return 0;
-}
-
 int32_t SPVM__Net__SSLeay__get_certificate(SPVM_ENV* env, SPVM_VALUE* stack) {
   
   int32_t error_id = 0;
@@ -843,43 +764,6 @@ int32_t SPVM__Net__SSLeay__get_certificate(SPVM_ENV* env, SPVM_VALUE* stack) {
   }
   
   stack[0].oval = obj_x509;
-  
-  return 0;
-}
-
-int32_t SPVM__Net__SSLeay__get0_next_proto_negotiated(SPVM_ENV* env, SPVM_VALUE* stack) {
-  
-  int32_t error_id = 0;
-  
-  void* obj_self = stack[0].oval;
-  
-  void* obj_data_ref = stack[1].oval;
-  
-  int32_t* len_ref = stack[2].iref;
-  
-  SSL* self = env->get_pointer(env, stack, obj_self);
-  
-  if (!obj_data_ref) {
-    return env->die(env, stack, "The data reference $data_ref must be defined.", __func__, FILE_NAME, __LINE__);
-  }
-  
-  int32_t data_ref_length = env->length(env, stack, obj_data_ref);
-  
-  if (!(data_ref_length == 1)) {
-    return env->die(env, stack, "The length of the data reference $data_ref must be 1.", __func__, FILE_NAME, __LINE__);
-  }
-  
-  const unsigned char* data_ref_tmp[1] = {0};
-  unsigned len_ref_tmp = -1;
-  SSL_get0_next_proto_negotiated(self, data_ref_tmp, &len_ref_tmp);
-  
-  if (data_ref_tmp[0]) {
-    void* obj_data = env->new_string_nolen(env, stack, data_ref_tmp[0]);
-    
-    env->set_elem_object(env, stack, obj_data_ref, 0, obj_data);
-  }
-  
-  *len_ref = len_ref_tmp;
   
   return 0;
 }
