@@ -26,8 +26,12 @@
     * Remove Net::SSLeay::EC_KEY class.
     * Remove Net::SSLeay::PEM#read_bio_DHparams method.
     * Remove Net::SSLeay::DH class.
-    * Remove Net::SSLeay::PEM#get0_next_proto_negotiated method.
-    * Remove Net::SSLeay::PEM#get0_next_proto_negotiated_return_string method.
+    * Remove Net::SSLeay#get0_next_proto_negotiated method.
+    * Remove Net::SSLeay#get0_next_proto_negotiated_return_string method.
+    * Remove Net::SSLeay#ssl_session field.
+    * Remove Net::SSLeay#session_reused method.
+    * Remove Net::SSLeay#get1_session method.
+    * Remove Net::SSLeay#set_session method.
     
   [Bug Fix]
     * Fix bugs of Net::SSLeay#get0_alpn_selected method.
